--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,18 @@
 header{
-    background-color: red;
+    width: 1024px;
+    margin: 0 auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+header nav ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+
+header nav ul li {
+    padding: 0 15px;
 }
