--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Noto+Sans+JP:wght@100..900&display=swap');
 @import 'header.css';
 *{
     margin: 0;
@@ -6,7 +6,7 @@
     border: 0;
     font-size: 100%;
     font: inherit;
-    font-family: "DotGothic16", sans-serif;
+    font-family: "Noto Sans JP", sans-serif;
     vertical-align: baseline;
 
 }
