--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,18 +1,16 @@
-header{
-    width: 1024px;
-    margin: 0 auto;
-
-    display: flex;
-    flex-direction: row;
+header section{   
+    
     justify-content: space-between;
+    align-items: center;
 }
 
-header nav ul {
+header nav ul
+{
     display: flex;
     flex-direction: row;
     list-style: none;
 }
-
-header nav ul li {
-    padding: 0 15px;
+header nav ul li
+{
+    padding: 15px;
 }
