--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Noto+Sans+JP:wght@100..900&display=swap');
+/*Font */
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+/*Componentes */
 @import 'header.css';
+@import 'buttons.css';
+@import 'main.css';
+/*Reset css */
 *{
     margin: 0;
     padding: 0;
     border: 0;
     font-size: 100%;
     font: inherit;
-    font-family: "Noto Sans JP", sans-serif;
     vertical-align: baseline;
-
+    text-decoration: none;
+    font-family: "Source Code Pro", monospace;
+    font-weight: 300;
+}
+.container
+{
+    width: 1024px;
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+}
+.row
+{
+    display: flex; 
+    flex-direction: row; 
 }
