--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -6,7 +6,7 @@
 .btn.btn-laranja
 {
     display: block;
-    margin: 0 1px;
+    margin: 5px 1px;
     text-decoration: none;
     color: #fff;
     background-color: #ffb36b; /* Laranja */
