--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,10 @@
 /*Font */
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 /*Componentes */
+@import 'bootstrap.css';
 @import 'header.css';
 @import 'buttons.css';
 @import 'main.css';
 @import 'footer.css';
-@import 'responsive.css';
-/*Reset css */
-*{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-    text-decoration: none;
-    font-family: "Source Code Pro", monospace;
-    font-weight: 300;
-    list-style: none;
-}
-
-body
-{
-    background-image: url(../images/bolha-background.png);
-    background-repeat: no-repeat;
-    background-position: left;
-}
-.container
-{
-    width: 1024px;
-    margin: 30px auto;
-    display: flex;
-    flex-direction: column;
-}
-.row
-{
-    display: flex; 
-    flex-direction: row; 
-}
+@import 'responsive-background.css';
+@import 'responsive-elements.css';
